# sclisp

./: CMakeLists.txt  README.rst  TODO
include/: sclisp.h
repl/: sclisp-repl.c
src/: sclisp.c
test/: sclisp-test.c
tests/: external.c  internal.c  main.c  sclisp-test.h
